--- a/css/problems.css
+++ b/css/problems.css
@@ -13,8 +13,8 @@
 
 .probs-blob-left {
     background: #007899;
-    background: linear-gradient(-60deg, rgba(0,120,153,0.5) 0%, rgba(103,180,111,1) 100%);
-    border-radius: 67% 33% 73% 27% / 46% 42% 58% 54%  ;
+    background: linear-gradient(-60deg, rgba(0, 120, 153, 0.5) 0%, rgba(103, 180, 111, 1) 100%);
+    border-radius: 67% 33% 73% 27% / 46% 42% 58% 54%;
     z-index: 2;
     margin-left: auto;
     margin-right: -100px;
@@ -23,8 +23,8 @@
 
 .probs-blob-center {
     background: green;
-    background: linear-gradient(60deg, rgba(177,112,18,1) 0%, rgba(179,104,25,0.5) 100%);
-    border-radius: 50% 50% 36% 64% / 68% 28% 72% 32% ;
+    background: linear-gradient(60deg, rgba(177, 112, 18, 1) 0%, rgba(179, 104, 25, 0.5) 100%);
+    border-radius: 50% 50% 36% 64% / 68% 28% 72% 32%;
     z-index: 1;
     margin-top: 50px;
     margin-right: -25px;
@@ -34,7 +34,7 @@
 
 .probs-blob-right {
     background: blue;
-    background: linear-gradient(-120deg, rgba(199,222,215,1) 0%, rgba(217,195,212,0.5) 100%);
+    background: linear-gradient(-120deg, rgba(199, 222, 215, 1) 0%, rgba(217, 195, 212, 0.5) 100%);
 
     border-radius: 56% 44% 34% 66% / 34% 41% 59% 66%;
 
@@ -49,20 +49,22 @@
     padding-top: 1rem;
 }
 
-@media(max-width: 1540px) {
+@media (max-width: 1540px) {
     .probs-blob {
         height: 400px !important;
         width: 400px !important;
     }
 }
 
-@media(max-width: 1400px) {
-    .probs-blob-left, .probs-blob-center, .probs-blob-right {
+@media (max-width: 1400px) {
+    .probs-blob-left,
+    .probs-blob-center,
+    .probs-blob-right {
         margin: 0 auto;
     }
 }
 
-@media(max-width: 768px) {
+@media (max-width: 768px) {
     .probs-blob {
         height: 300px !important;
         width: 300px !important;
@@ -74,10 +76,5 @@
 
     .row {
         display: block !important;
-    }
-
-    .main-heading {
-        font-size: 4rem;
-        max-width: 100vw;
     }
 }
